fix overflow in catalog-item

--- a/smk-edit/static/components/catalog-item.css
+++ b/smk-edit/static/components/catalog-item.css
@@ -20,6 +20,7 @@
 
 .catalog-item.size-1 .card-content {
     padding-bottom: 0;
+    overflow-wrap: anywhere;
 }
 
 
